_k8s/db.yaml
##################################################################################################
# authjs-db
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: authjs-db
  labels:
    app: authjs-db
    service: authjs
spec:
  ports:
    - port: 5432
      name: tcp
      appProtocol: tcp
  selector:
    app: authjs-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authjs-db
  labels:
    app: authjs-db
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authjs-db
      version: v1
  template:
    metadata:
      labels:
        app: authjs-db
        version: v1
    spec:
      serviceAccountName: authjs-db
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - name: authjs-db
          image: postgres:16.1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 400m
              memory: 400Mi
            requests:
              cpu: 200m
              memory: 200Mi
          tty: true
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: authjs-db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: authjs-db-data
          persistentVolumeClaim:
            claimName: authjs-db-data
