_k8s/idp.yaml
##################################################################################################
# authjs-idp
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: authjs-idp
  labels:
    app: authjs-idp
    service: authjs
spec:
  ports:
    - port: 8080
      name: external
      appProtocol: http
      protocol: TCP
  selector:
    app: authjs-idp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authjs-idp
  labels:
    app: authjs-idp
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authjs-idp
      version: v1
  template:
    metadata:
      labels:
        app: authjs-idp
        version: v1
    spec:
      serviceAccountName: authjs-idp
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - name: authjs-idp
          image: bitnami/keycloak:23
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 400m
              memory: 400Mi
            requests:
              cpu: 200m
              memory: 200Mi
          tty: true
          ports:
            - containerPort: 8080
