_k8s/istio.yaml
# ##################################################################################################
# # Services
# ##################################################################################################
# ---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: services
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: public-http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - "*"
    - port:
        number: 443
        name: public-https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: tls-credential-aimerzarashi.com
      hosts:
        - "*"
##################################################################################################
# authjs-web
##################################################################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authjs-web
spec:
  hosts:
    - authjs-web.aimerzarashi.com
  gateways:
    - services
  http:
    - route:
        - destination:
            host: authjs-web
            port:
              number: 3000
##################################################################################################
# authjs-idp
##################################################################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authjs-idp
spec:
  hosts:
    - authjs-idp.aimerzarashi.com
  gateways:
    - services
  http:
    - route:
        - destination:
            host: authjs-idp
            port:
              number: 8080
